--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,12 +1,9 @@
 <html>
 <body>
-<h2>Welcome to the Zuul Proxy</h2>
+<h2>Zuul Proxy DAN DOT</h2>
 <ul>
-  <li><a href="/get" data-bare-link="true"><code>/get</code></a> Returns GET data.</li>
-  <li><a href="/links/10"><code>/links/:n</code></a> Returns page containing <em>n</em> HTML links.</li>
-  <li><a href="/image/png"><code>/image/png</code></a> Returns page containing a PNG image.</li>
-  <li><a href="/image/jpeg"><code>/image/jpeg</code></a> Returns page containing a JPEG image.</li>
-  <li><a href="/image/webp"><code>/image/webp</code></a> Returns page containing a WEBP image.</li>
-  <li><a href="/image/svg"><code>/image/svg</code></a> Returns page containing a SVG image.</li>
+  <li><a href="/obra"><code>/obra</code></a> Retorna la pagina que contiene los datos de las obras.</li>
+  <li><a href="/cliente"><code>/cliente</code></a> Retorna la pagina que contiene los datos de clientes. </li>
+  <li><a href="/empleado"><code>/empleado</code></a> Retorna la pagina que contiene los datos de empleados. </li>
 </body>
 </html>
