Redirección con Zuul para Microservicios de Pagos y Pedidos

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -5,5 +5,7 @@
   <li><a href="/obra"><code>/obra</code></a> Retorna la pagina que contiene los datos de las obras.</li>
   <li><a href="/cliente"><code>/cliente</code></a> Retorna la pagina que contiene los datos de clientes. </li>
   <li><a href="/empleado"><code>/empleado</code></a> Retorna la pagina que contiene los datos de empleados. </li>
+  <li><a href="/pago"><code>/pago</code></a> Retorna la pagina que contiene los datos de pagos. </li>
+  <li><a href="/pedido"><code>/pedido</code></a> Retorna la pagina que contiene los datos de pedidos. </li>
 </body>
 </html>
